// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Photo renders full photo with all elements when using infinite query 1`] = `
<div>
  <div
    class="sc-gsFSXt cUMUji"
  >
    <div
      class="sc-aXZVf kiiPPS"
    >
      <div>
        <a
          class="sc-gEvEes fToabx"
          data-discover="true"
          href="/photos/photo-0"
        >
          ← Предыдущее
        </a>
      </div>
      <div>
        <a
          class="sc-eqUAAB ggcUMx"
          href="/photo-full.jpg"
          rel="noreferrer"
          target="_blank"
        >
          Полный размер
        </a>
      </div>
      <div>
        <a
          class="sc-gEvEes fToabx"
          data-discover="true"
          href="/photos/photo-2"
        >
          Следующее →
        </a>
      </div>
    </div>
    <img
      alt="Test Photo"
      class="sc-jXbUNf eOpRDV"
      src="/photo-md.jpg"
    />
    <h1
      class="sc-kAycey jeuoOz"
    >
      Test Photo
    </h1>
    <div
      class="sc-imWYAH gYoAWR"
    >
      <a
        data-discover="true"
        href="/photos?dateFrom=2024-01-15&dateTo=2024-01-15"
      >
        formatted:2024-01-15T10:30:00Z
      </a>
    </div>
    <div
      data-testid="tag-list"
    >
      <span>
        landscape
      </span>
    </div>
    <div
      data-testid="map-embed"
    >
      map:
      55.7558
      ,
      37.6173
    </div>
  </div>
</div>
`;

exports[`Photo renders loader when loading 1`] = `
<div>
  <div
    class="sc-gsFSXt cUMUji"
  >
    <div
      class="sc-aXZVf kiiPPS"
    >
      <div />
      <div />
      <div />
    </div>
    <div
      data-testid="loader"
    >
      loader
    </div>
    <h1
      class="sc-kAycey jeuoOz"
    />
  </div>
</div>
`;

exports[`Photo renders photo with GPS coordinates and MapEmbed 1`] = `
<div>
  <div
    class="sc-gsFSXt cUMUji"
  >
    <div
      class="sc-aXZVf kiiPPS"
    >
      <div />
      <div>
        <a
          class="sc-eqUAAB ggcUMx"
          href="/photo-full.jpg"
          rel="noreferrer"
          target="_blank"
        >
          Полный размер
        </a>
      </div>
      <div />
    </div>
    <img
      alt="Test Photo"
      class="sc-jXbUNf eOpRDV"
      src="/photo-md.jpg"
    />
    <h1
      class="sc-kAycey jeuoOz"
    >
      Test Photo
    </h1>
    <div
      data-testid="map-embed"
    >
      map:
      55.7558
      ,
      37.6173
    </div>
  </div>
</div>
`;

exports[`Photo renders photo with basic info 1`] = `
<div>
  <div
    class="sc-gsFSXt cUMUji"
  >
    <div
      class="sc-aXZVf kiiPPS"
    >
      <div />
      <div>
        <a
          class="sc-eqUAAB ggcUMx"
          href="/photo-full.jpg"
          rel="noreferrer"
          target="_blank"
        >
          Полный размер
        </a>
      </div>
      <div />
    </div>
    <img
      alt="Test Photo"
      class="sc-jXbUNf eOpRDV"
      src="/photo-md.jpg"
    />
    <h1
      class="sc-kAycey jeuoOz"
    >
      Test Photo
    </h1>
  </div>
</div>
`;

exports[`Photo renders photo with neighbours navigation 1`] = `
<div>
  <div
    class="sc-gsFSXt cUMUji"
  >
    <div
      class="sc-aXZVf kiiPPS"
    >
      <div>
        <a
          class="sc-gEvEes fToabx"
          data-discover="true"
          href="/photos/photo-0"
        >
          ← Предыдущее
        </a>
      </div>
      <div>
        <a
          class="sc-eqUAAB ggcUMx"
          href="/photo-full.jpg"
          rel="noreferrer"
          target="_blank"
        >
          Полный размер
        </a>
      </div>
      <div>
        <a
          class="sc-gEvEes fToabx"
          data-discover="true"
          href="/photos/photo-2"
        >
          Следующее →
        </a>
      </div>
    </div>
    <img
      alt="Test Photo"
      class="sc-jXbUNf eOpRDV"
      src="/photo-md.jpg"
    />
    <h1
      class="sc-kAycey jeuoOz"
    >
      Test Photo
    </h1>
  </div>
</div>
`;

exports[`Photo renders photo with tags 1`] = `
<div>
  <div
    class="sc-gsFSXt cUMUji"
  >
    <div
      class="sc-aXZVf kiiPPS"
    >
      <div />
      <div>
        <a
          class="sc-eqUAAB ggcUMx"
          href="/photo-full.jpg"
          rel="noreferrer"
          target="_blank"
        >
          Полный размер
        </a>
      </div>
      <div />
    </div>
    <img
      alt="Test Photo"
      class="sc-jXbUNf eOpRDV"
      src="/photo-md.jpg"
    />
    <h1
      class="sc-kAycey jeuoOz"
    >
      Test Photo
    </h1>
    <div
      data-testid="tag-list"
    >
      <span>
        nature
      </span>
      <span>
        sunset
      </span>
    </div>
  </div>
</div>
`;

exports[`Photo renders photo with takenAt date 1`] = `
<div>
  <div
    class="sc-gsFSXt cUMUji"
  >
    <div
      class="sc-aXZVf kiiPPS"
    >
      <div />
      <div>
        <a
          class="sc-eqUAAB ggcUMx"
          href="/photo-full.jpg"
          rel="noreferrer"
          target="_blank"
        >
          Полный размер
        </a>
      </div>
      <div />
    </div>
    <img
      alt="Test Photo"
      class="sc-jXbUNf eOpRDV"
      src="/photo-md.jpg"
    />
    <h1
      class="sc-kAycey jeuoOz"
    >
      Test Photo
    </h1>
    <div
      class="sc-imWYAH gYoAWR"
    >
      <a
        data-discover="true"
        href="/photos?dateFrom=2024-01-15&dateTo=2024-01-15"
      >
        formatted:2024-01-15T10:30:00Z
      </a>
    </div>
  </div>
</div>
`;
